Add content from thesis

--- a/optimset.bib
+++ b/optimset.bib
@@ -9,6 +9,14 @@
     pages        = {188--217},
 }
 
+@book{Audet_Hare_2017,
+    title        = {Derivative-Free and Blackbox Optimization},
+    author       = {Audet, C. and Hare, W.},
+    year         = 2017,
+    publisher    = {Springer},
+    series       = {Springer Ser. Oper. Res. Financ. Eng.},
+}
+
 @article{Booker_Etal_1999,
     title        = {A rigorous framework for optimization of expensive functions by surrogates},
     author       = {Booker, A. J. and Dennis, Jr., J. E. and Frank, P. D. and Serafini, D. B. and Torczon, V. and Trosset, M. W.},
@@ -16,6 +24,14 @@
     journal      = {Struct. Multidiscip. Optim.},
     volume       = 17,
     pages        = {1--13},
+}
+
+@book{Conn_Gould_Toint_2000,
+    title        = {Trust-Region Methods},
+    author       = {Conn, A. R. and Gould, N. I. M. and Toint, Ph. L.},
+    year         = 2000,
+    publisher    = {SIAM},
+    series       = {MPS-SIAM Ser. Optim.},
 }
 
 @book{Conn_Scheinberg_Vicente_2009,
@@ -34,6 +50,15 @@
     publisher    = {Springer},
     pages        = {27--47},
     editor       = {{Di Pillo}, G. and Giannessi, F.},
+}
+
+@article{Dennis_Schnabel_1979,
+    title        = {Least change secant updates for quasi-{Newton} methods},
+    author       = {Dennis, Jr., J. E. and Schnabel, R. B.},
+    year         = 1979,
+    journal      = {SIAM Rev.},
+    volume       = 4,
+    pages        = {443--459},
 }
 
 @article{Eldred_Etal_2022,
@@ -155,6 +180,15 @@
     institution  = {Department of Applied Mathematics and Theoretical Physics, University of Cambridge},
 }
 
+@article{Powell_2013,
+    title        = {Beyond symmetric {Broyden} for updating quadratic models in minimization without derivatives},
+    author       = {Powell, M. J. D.},
+    year         = 2013,
+    journal      = {Math. Program.},
+    volume       = 138,
+    pages        = {475--500},
+}
+
 @article{Qian_Yu_2021,
     title        = {Derivative-free reinforcement learning: a review},
     author       = {Qian, H. and Yu, Y.},
@@ -171,13 +205,6 @@
     school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University},
 }
 
-@phdthesis{Zhang_2012,
-    title        = {On Derivative-Free Optimization Methods \textnormal{(in Chinese)}},
-    author       = {Zhang, Z.},
-    year         = 2012,
-    school       = {Chinese Academy of Sciences}
-}
-
 @misc{Ragonneau_Zhang_2023,
     title        = {{COBYQA --- Constrained Optimization BY Quadratic Approximations}},
     author       = {Ragonneau, T. M. and Zhang, Z.},
@@ -192,29 +219,9 @@
     booktitle    = {The Tenth Copper Mountain Conference on Iterative Methods},
 }
 
-@article{Dennis_Schnabel_1979,
-    author       = {Dennis, Jr., J. E. and Schnabel, R. B.},
-    title        = {Least change secant updates for quasi-{Newton} methods},
-    journal = {SIAM Rev.},
-    volume       = {4},
-    pages        = {443--459},
-    year         = {1979},
+@phdthesis{Zhang_2012,
+    title        = {On Derivative-Free Optimization Methods \textnormal{(in Chinese)}},
+    author       = {Zhang, Z.},
+    year         = 2012,
+    school       = {Chinese Academy of Sciences},
 }
-
-@book{Conn_Gould_Toint_2000,
-    author    = {Conn, A. R. and Gould, N. I. M. and Toint, Ph. L.},
-    title     = {Trust-Region Methods},
-    series    = {MPS-SIAM Ser. Optim.},
-    publisher = {SIAM},
-    year      = {2000},
-}
-
-@article{Powell_2013,
-    title        = {Beyond symmetric {Broyden} for updating quadratic models in minimization without derivatives},
-    author       = {Powell, M. J. D.},
-    year         = 2013,
-    journal      = {Math. Program.},
-    volume       = 138,
-    pages        = {475--500}
-}
-
